# perez

./: .gitignore  LICENSE  README.txt  pyproject.toml
perez/: gemini.py  gemtext.py  web.py
perez/static/: gemini_link_rewrite.js  gemtext.css
perez/templates/: error.html  gemtext.html  input.html  redirect.html
